--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>NASA`s expeditions to Mars</title>
+
+      <link
+         href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+         rel="stylesheet"
+         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+         crossorigin="anonymous"
+      />
       <link rel="stylesheet" href="./style.css" />
    </head>
    <body>
-      <h1>NASA`s expeditions to Mars</h1>
+      <header>
+         <h1>Mars Rover Photos</h1>
+         <h2>
+            Image data gathered by NASA's Curiosity, Opportunity, and Spirit
+            rovers on Mars
+         </h2>
+      </header>
+
       <!-- <main class="container">
          
          <h2 id="title"></h2>
@@ -42,49 +56,69 @@
 
       <section class="test">
          <form class="input-data">
-            <label for="rovers">Select a Rover: </label>
-            <select name="rovers" id="rovers">
-               <option selected value="curiosity">Curiosity</option>
-               <option value="opportunity">Opportunity</option>
-               <option value="spirit">Spirit</option>
-            </select>
+            <div class="form-first-row">
+               <label class="form-label" for="rovers">Select a Rover: </label>
+               <select class="form-select decorated" name="rovers" id="rovers">
+                  <option selected value="curiosity">Curiosity</option>
+                  <option class="decor" value="opportunity">Opportunity</option>
+                  <option value="spirit">Spirit</option>
+               </select>
 
-            <label for="cameras">Select a Camera: </label>
-            <select name="cameras" id="cameras">
-               <option selected value="FHAZ">FHAZ</option>
-               <option value="RHAZ">RHAZ</option>
-               <option value="MAST">MAST</option>
-               <option value="CHEMCAM">CHEMCAM</option>
-               <option value="MAHLI">MAHLI</option>
-               <option value="MARDI">MARDI</option>
-               <option value="NAVCAM">NAVCAM</option>
-               <option value="PANCAM">PANCAM</option>
-               <option value="MINITES">MINITES</option>
-            </select>
+               <label class="form-label" for="cameras">Select a Camera: </label>
+               <select
+                  class="decorated form-select"
+                  name="cameras"
+                  id="cameras"
+               >
+                  <option selected value="FHAZ">FHAZ</option>
+                  <option value="RHAZ">RHAZ</option>
+                  <option value="MAST">MAST</option>
+                  <option value="CHEMCAM">CHEMCAM</option>
+                  <option value="MAHLI">MAHLI</option>
+                  <option value="MARDI">MARDI</option>
+                  <option value="NAVCAM">NAVCAM</option>
+                  <option value="PANCAM">PANCAM</option>
+                  <option value="MINITES">MINITES</option>
+               </select>
 
-            <label for="sol"
-               >Enter sol (ranges from 0 to max found in endpoint)</label
-            >
+               <label class="form-label" for="sol">Enter a sol:</label>
+               <input
+                  class="form-control decorated"
+                  name="sol"
+                  id="sol"
+                  type="text"
+                  value="0"
+                  ;
+               />
+            </div>
+
+            <p class="sol-discription">
+               Photos are organized by the sol (Martian rotation or day) on
+               which they were taken, counting up from the rover's landing date.
+               <br />
+               Enter a value - from 0 to max found in endpoint
+            </p>
+
             <input
-               name="sol"
-               id="sol"
-               type="text"
-               placeholder="enter a number from 0 to 1000"
-               value="0"
-               ;
+               class="btn2 mb-4"
+               id="showButton"
+               type="submit"
+               value="Show expedition"
             />
-
-            <input id="showButton" type="submit" value="Show expedition" />
          </form>
 
-         <div class="display-result"></div>
-         <div class="empty-result"></div>
-         <input
-            class="load-more"
-            id="loadMore"
-            type="submit"
-            value="Load more…"
-         />
+         <div class="display-result mb-3"></div>
+
+         <div class="second-display">
+            <input
+               class="load-more"
+               id="loadMore"
+               type="submit"
+               value="Load more…"
+            />
+
+            <div class="empty-result"></div>
+         </div>
       </section>
 
       <script type="text/javascript" src="config.js"></script>
