--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
          crossorigin="anonymous"
       />
+      <!-- <link rel="stylesheet" href="./bootstrap.min.css" />
+      <script defer src="bootstrap.bundle.min.js"></script> -->
+
       <link rel="stylesheet" href="./style.css" />
    </head>
    <body>
