--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <link rel="stylesheet" href="./style.css" />
    </head>
-   <body>
+   <body id="body">
       <header id="header">
          <h1>Mars Rover Photos</h1>
          <h2>
@@ -111,7 +111,7 @@
             />
          </form>
 
-         <div class="display-result mb-3"></div>
+         <div tabindex="3" class="display-result mb-3"></div>
 
          <div class="second-display">
             <input
@@ -124,7 +124,7 @@
          </div>
 
          <div class="up-btn-body">
-            <a href="#header">&#8593;</a>
+            <a href="#body">&#8593;</a>
          </div>
       </section>
 
